# remarkable-keyboard-adapter

./: CMakeLists.txt  README.md  app.c  app.h  attribute.c  attribute.h  command.c  command.h  packet.c  packet.h  rm_keyboard.c  rm_keyboard.h  tusb_config.h  usb_keyboard.c  usb_keyboard.h
scripts/: flash.sh
